@@ -1,4 +1,5 @@
 Changes for 1.3.10
+   Print stdout/stderr to Windows command prompt
    Create window as maximized if it fills the available screen space
    Load md3 player skins with upper case extension (.SKIN)
    Use Win32 API to support non-ASCII filenames
